Change implementation of button click animation to css instead of javascript

--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ button {
     font-size: 25px;
 }
 
+button:hover {
+    background-color: black;
+}
+
+.pad button:active {
+    background-color: #388;
+}
+
 .pad, .operators, .container {
     display: flex;
     flex-direction: column;
