--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ button {
     font-size: 25px;
 }
 
+.operator {
+    background-color: #343d46;
+}
+
+.clear {
+    background-color: #3882f6;
+}
+
 button:hover {
     background-color: black;
 }
